--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "hugo-now"
 # Comment the themesDir option if you use this theme in production
 # themesDir = "../.."
 # google analytics
-# GoogleAnalytics = "UA-XXXXXX"
+GoogleAnalytics = "UA-165601039-1"
 
 [taxonomies]
   archive = "archives"
